Added YANI by Mandevil: The Vibrating Square is a valid teleportation target.

--- a/Changelog
+++ b/Changelog
@@ -29,6 +29,7 @@ QOL and Major Balance Changes
   wishing.
 - Monsters can only get wishes from smoky potions now, not wands of
   wishing. Wishes for wands of death and archon figurines were removed.
+- The vibrating square can now be teleported onto directly (YANI by Mandevil)
 - Vlad now  has a slowing attack.
 
 New Monsters (16)
