--- a/Changelog
+++ b/Changelog
@@ -39,6 +39,7 @@ QOL Changes
 
 Balance Changes
 - Nerfed Lord of the Foocubi and Will-o'-the-wisps after player feedback.
+- Nerfed mind flayer telepath damage.
 - Only dragons can randomly roar now, as opposed to any monster with MS_ROAR.
 - Reduced the number of marids and giant eels on the plane of water.
 - Monsters can only get wishes from smoky potions now, not wands of
