Nerfed psychic attacks so that they no longer confuse the player.

--- a/Changelog
+++ b/Changelog
@@ -20,6 +20,7 @@ Balance Changes
 - The demon lords that appear due to performing the ritual are no longer
   covetous, preventing the player from being mobbed and randomly killed during
   the ascension.
+- Nerfed psionic attacks so that they no longer confuse the player.
 
 Role and Race Changes
 - Infernals use their own race tag, which changes their class selection
