Correct Jon Wätte's name in many places to account for encoding.

--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -5116,7 +5116,7 @@ and {\it Paul Winner}, ported {\it NetHack\/} 3.1 to the PC.
 
 %.pg
 \medskip
-\nd {\it Jon W\{tte} and {\it Hao-yang Wang},
+\nd {\it Jon W\"{a}tte} and {\it Hao-yang Wang},
 with help from {\it Ross Brown}, {\it Mike Engber}, {\it David Hairston},
 {\it Michael Hamel}, {\it Jonathan Handler}, {\it Johnny Lee},
 {\it Tim Lennan}, {\it Rob Menke}, and {\it Andy Swanson},
@@ -5406,7 +5406,7 @@ Ari Huttunen & John Kallen & Patric Mueller\\
 Barton House & John Rupley & Paul Winner\\
 Benson I. Margulies & John S. Bien & Pierre Martineau\\
 Bill Dyer & Johnny Lee & Ralf Brown\\
-Boudewijn Waijers & Jon W\{tte & Ray Chason\\
+Boudewijn Waijers & Jon W\"{a}tte & Ray Chason\\
 Bruce Cox & Jonathan Handler & Richard Addison\\
 Bruce Holloway & Joshua Delahunty & Richard Beigel\\
 Bruce Mewborne & Keizo Yamamoto & Richard P. Hughey\\
