--- a/sys/share/sounds/README
+++ b/sys/share/sounds/README
@@ -29,6 +29,6 @@ for the available hardware.
 
 Any comment on the sounds or their use is welcome:
 
-						Jon W{tte
+						Jon Watte
 						Mac Team
 						nethack-bugs@nethack.org
