--- a/dat/history
+++ b/dat/history
@@ -54,7 +54,7 @@ Mike Passaretti, and Olaf Seibert, developed NetHack 3.1 for the Amiga.
 Norm Meluch and Kevin Smolkowski, with help from Carl Schelin, Stephen
 Spackman, Steve VanDevender, and Paul Winner, ported NetHack 3.1 to the PC.
 
-Jon W{tte and Hao-yang Wang, with help from Ross Brown, Mike Engber, David
+Jon Watte and Hao-yang Wang, with help from Ross Brown, Mike Engber, David
 Hairston, Michael Hamel, Jonathan Handler, Johnny Lee, Tim Lennan, Rob Menke,
 and Andy Swanson developed NetHack 3.1 for the Macintosh, porting it for
 MPW.  Building on their development, Barton House added a Think C port.
@@ -237,7 +237,7 @@ miscreants in this, the list of Dungeoneers:
     Barton House              John Rupley               Paul Winner
     Benson I. Margulies       John S. Bien              Pierre Martineau
     Bill Dyer                 Johnny Lee                Ralf Brown
-    Boudewijn Waijers         Jon W{tte                 Ray Chason
+    Boudewijn Waijers         Jon Watte                 Ray Chason
     Bruce Cox                 Jonathan Handler          Richard Addison
     Bruce Holloway            Joshua Delahunty          Richard Beigel
     Bruce Mewborne            Keizo Yamamoto            Richard P. Hughey
